recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:11: error: '<-' expected but '=' found.
  for(i = 0: 4){   
        ^FourSquare:16: error: illegal start of simple expression
} 
^